# Citation-Agent

./: .dockerignore  .gitignore  Dockerfile  README.md  citations_links.txt  database_builder.py  dataset_links.txt  deploy.py  environment.py  fix_dataset.py  generate_tasks.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py
server/: __init__.py  app.py  citation_environment.py
