[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "citation-agent"
version = "1.0.0"
description = "OpenEnv environment for academic citation verification and literature review"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "httpx>=0.24.0",
    "requests",
    "huggingface-hub",
    "python-dotenv",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
citation-agent-server = "server.app:main"

[project.optional-dependencies]
dev = ["pytest"]
